--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  date_format_field: ^0.1.0
+  flutter_linkify: ^6.0.0
+  url_launcher: ^6.2.5
+  file_picker: ^8.0.0+1
+  filesystem_picker: ^4.1.0
 
 dev_dependencies:
   flutter_test:
